# podcast_llama

./: .gitignore  README.md  Session.vim  cleaned_text.txt  extracted_text.txt  new_story.txt  phase1.ipynb  phase2.ipynb  podcastify.ipynb  preproces-improved.ipynb  preprocess_interactive.txt  pyproject.toml  story-generator.py  story_generator_based_on_moral.py  vi  vim-session.vim
app/: app.py
app/helper_functions/: reasoning_functions.py
helper_functions/: resoning_helpers.py
src/: model_utils.py
src/audiogen/: __init__.py  audiogen.py
src/audiogen/models/: __init__.py  models.py
src/audiogen/tts/: __init__.py  tts.py  tts_utils.py
src/audiogen/utils/: __init__.py  utils.py
src/mediagen/models/: __init__.py  model_manager.py
src/mediagen/models/audio/: sesame_csm.py  voices.py  zyphra_zonos.py
src/mediagen/tts/: __init__.py  tts.py  tts_utils.py
src/mediagen/utils/: __init__.py  utils.py
src/models/: models.py
src/utils/: utils.py
stories/: Journey_Through_Grief__A_Path_to_Healing_reasoning.txt  Journey_Through_Grief__A_Path_to_Healing_story.txt  Strength_in_Unity__Elara_s_Journey_of_Transformation_reasoning.txt  Strength_in_Unity__Elara_s_Journey_of_Transformation_story.txt
voice-clone/: model_utils.py  test.ipynb  utils.py  voice-gen.py  voice-merger.ipynb
voice-clone/src/audiogen/models/: models.py
