[project]
name = "podcast_llama"
version = "0.1.0"
description = "Text-to-speech by Zyphra"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0", # csm
    "setuptools",
    "packaging",
    "inflect>=7.5.0",
    "kanjize>=1.5.0",
    "numpy>=2.2.2", # avoid incompatibility, comment numba==0.61.0 and numpy>=2.1.3
    "phonemizer>=3.3.0",
    "sudachidict-full>=20241021",
    "sudachipy>=0.6.10",
    "torchaudio>=2.4.0", # csm
    "tokenizers>=0.21.0", # csm
    "transformers>=4.49.0", # csm
    "soundfile>=0.13.1",
    "huggingface-hub>=0.28.1", # csm
    "moshi>=0.2.2", # csm
    "torchtune>=0.4.0", # csm
    "torchao>=0.9.0",
    "gradio>=5.15.0",
    "jupyterlab",
    "catppuccin-jupyterlab",
    "librosa==0.10.2.post1",
    "resampy",
    "silentcipher @ git+https://github.com/SesameAILabs/silentcipher@master", # csm

    # string processing
    "nltk",

    # Zonos
    "zonos @ git+https://github.com/Zyphra/Zonos@main"
]

# Note: Not actually optional. All the modeling code lives in mamba-ssm.
# We put them here to make the two-stage installation process easier.
[project.optional-dependencies]
compile = [
    "flash-attn>=2.7.3",
    "mamba-ssm>=2.2.4",
    "causal-conv1d>=1.5.0.post8",
]

# FIXME
# remove using zonos as a backend and use it as a dependency instead
# [tool.setuptools.packages.find]
# include = ["zonos", "csm"]

[tool.uv]
no-build-isolation-package = ["flash-attn", "mamba-ssm", "causal-conv1d"]

[tool.ruff]
line-length = 120
